@@ -84,3 +84,4 @@
 
 	* Ported to Python 3.X
 	* Added a DeleteRootError to exceptions thrown when trying to delete '/'
+	* Added a remove_all function to utils
